--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>vue-music</title>
+    <script src="//y.gtimg.cn/music/h5/player/player.js"></script>
   </head>
   <body>
+     
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
